disabled fb char auto hide, fixed webkit background blur on safari

--- a/assets/web/css/styles.css
+++ b/assets/web/css/styles.css
@@ -1241,7 +1241,7 @@ hr {
 	font-size:14px;
 	font-weight:300;
 	top:0;
-	backdrop-filter: blur(10px);
+	-webkit-backdrop-filter: blur(10px);
 }
 
 .logo {
